<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>relbot_interfaces</name>
  <version>1.0.0</version>
  <license>Apache License 2.0</license>
  <description>Main custom intefaces for the RELbot robot</description>
  <maintainer email="a.arredondo@student.utwente.nl">Álvaro Arredondo</maintainer>
  <maintainer email="m.oteomarin@student.utwente.nl">Miguel Oteo</maintainer>
  <author email="a.arredondo@student.utwente.nl">Álvaro Arredondo</author>
  <author email="m.oteomarin@student.utwente.nl">Miguel Oteo</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosidl_packages suffix="_msgs"></rosidl_packages>
  </export>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group> <!-- Add this line -->

</package>
